Merge FORGE-42 / FORGE-43 to trunk.
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@6188 7fc7bbf3-cf45-46d4-be06-341739edd864